# DG_Open

./: .config.env  .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  eth-dev.yaml  index.html  manage.py  multilingual_text_data.sql  openapi.json  openapi.yaml  package.json  ports.json  pyproject.toml  releases.json  report.html  requirements.txt  test-db-postgres.yml  test_config.py  test_logs.txt  update-import.js  youtube_cookies.txt
accounts/: serializers.py  utils.py  views.py
ai/: utils.py
api/: utils.py  views.py
common/: utils.py
connectors/: models.py  views.py
core/: asgi.py  base_models.py  celery.py  constants.py  settings.py  utils.py  views.py
database/: database_config.py
datahub/: database.py  models.py  test_models.py  urls.py  views.py
db_scripts/: userrole_fixture.yaml
django_core/: asgi.py  config.py  logging_config.py  settings.py  urls.py
docker/: docker-compose.backend.yml  docker-compose.frontend.yml
docs/: HLD_Technical_FarmStack2.md  README.md  TECHNICAL_STACK_DOC.md  TROUBLESHOOTING_DOC.md
farmer-chat/: .config.env  .gitignore  Dockerfile  README.md  entrypoint.sh  example_dot_env  index.html  openapi.json  openapi.yaml  requirements.txt
farmstack-backend/: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  Restructured_Agricultural_Data_with_Descriptions.csv  ansible.cfg  celerybeat-schedule.dir  celerybeat-schedule.pag  docker-compose.yaml  entry.sh  inventory  manage.py  nohup.out  req.txt  requirements.txt
farmstack-frontend/: .env.production.swp  .env.test  Dockerfile  README.md  (+3 more)
(+1455 files in other folders)
